--- a/WeatherApp/WeatherApp/wwwroot/css/site.css
+++ b/WeatherApp/WeatherApp/wwwroot/css/site.css
@@ -1,18 +1,228 @@
 html {
-  font-size: 14px;
+    font-size: 14px;
 }
 
 @media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+    html {
+        font-size: 16px;
+    }
 }
 
 html {
-  position: relative;
-  min-height: 100%;
+    position: relative;
+    min-height: 100%;
 }
 
 body {
-  margin-bottom: 60px;
+    margin-bottom: 60px;
+}
+
+/* Loader styles */
+#loader-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 500;
+}
+
+#loader {
+    border: 8px solid #f3f3f3;
+    border-top: 8px solid #3498db;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-top: -25px;
+    margin-left: -25px;
+    z-index: 700;
+}
+
+#loader-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 600;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+/* General Styling */
+
+
+.col-sm-12.col-lg-4.text-center.weatherCollumn {
+    display: grid;
+    align-content: center;
+}
+
+/* Card Styles */
+.card {
+    margin-top: 20px;
+    padding: 25px 10px;
+    border: 1px solid rgba(0, 0, 0, 0.125);
+    border-radius: 0.25rem;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+}
+
+.card-body {
+    padding: 1.25rem;
+}
+
+.card-title {
+    font-size: 1.25rem;
+    margin-bottom: 0.75rem;
+}
+
+/* Weather Data Styles */
+.weather-data {
+    font-weight: bold;
+}
+
+.weather-icon {
+    width: 90px;
+    height: 90px;
+    border: solid;
+    border-radius: 100%;
+}
+
+/* Button Styles */
+.btn {
+    padding: 0.375rem 0.75rem;
+    font-size: 0.875rem;
+    border-radius: 0.25rem;
+}
+
+.btn-primary {
+    color: #fff;
+    background-color: #007bff;
+    border-color: #007bff;
+}
+
+.btn-secondary {
+    color: #fff;
+    background-color: #6c757d;
+    border-color: #6c757d;
+}
+
+.btn-sm {
+    padding: 0.25rem 0.5rem;
+    font-size: 0.875rem;
+    border-radius: 0.2rem;
+}
+
+.btn-full-width {
+    width: 100%;
+}
+
+button.btn.btn-sm.btn-primary.CustomBtn {
+    width: 100%;
+    margin-bottom: 2%;
+}
+
+/* Media Queries for Responsive Design */
+@media (min-width: 576px) {
+    .card {
+        padding: 30px 15px;
+    }
+
+    .weather-icon {
+        width: 60px;
+        height: 60px;
+    }
+
+    .btn {
+        font-size: 0.9rem;
+    }
+
+    .card-title {
+        font-size: 1.5rem;
+    }
+
+    button.btn.btn-sm.btn-primary.CustomBtn {
+        margin-bottom: 1%;
+    }
+}
+
+@media (min-width: 768px) {
+    .card {
+        margin-top: 30px;
+        padding: 35px 20px;
+    }
+
+    .weather-icon {
+        width: 70px;
+        height: 70px;
+    }
+
+    .btn {
+        font-size: 1rem;
+    }
+
+    .card-title {
+        font-size: 1.75rem;
+    }
+
+    button.btn.btn-sm.btn-primary.CustomBtn {
+        margin-bottom: 0.5%;
+    }
+}
+
+@media (min-width: 992px) {
+    .card {
+        margin-top: 40px;
+        padding: 40px 25px;
+    }
+
+    .weather-icon {
+        width: 80px;
+        height: 80px;
+    }
+
+    .btn {
+        font-size: 1.1rem;
+    }
+
+    .card-title {
+        font-size: 2rem;
+    }
+
+    button.btn.btn-sm.btn-primary.CustomBtn {
+        margin-bottom: 10px;
+    }
+}
+
+@media (min-width: 1200px) {
+    .card {
+        margin-top: 50px;
+        padding: 45px 30px;
+    }
+
+    .weather-icon {
+        width: 120px;
+        height: 120px;
+        margin-bottom: 10px;
+    }
+
+    .btn {
+        font-size: 1.2rem;
+    }
+
+    .card-title {
+        font-size: 2.25rem;
+    }
 }
