--- a/WeatherApp/WeatherApp/Views/WeatherForecast/WeatherForecast.cshtml
+++ b/WeatherApp/WeatherApp/Views/WeatherForecast/WeatherForecast.cshtml
@@ -14,7 +14,7 @@
                                 <div class="form-group">
                                     <label for="location">Location:</label>
                                     <input type="text" class="form-control" id="location" name="location"  />
-                                    <div class="invalid-feedback">Please enter letters and spaces only.</div>
+                                    <div class="invalid-feedback">Please Enter A Valid Location.</div>
                                 </div>
                             </div>
                             <div class="col-sm-12 col-lg-6">
